--- a/covalence-react-boilerplate-db/package.json
+++ b/covalence-react-boilerplate-db/package.json
@@ -24,14 +24,22 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "bcrypt": "^2.0.1",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "mailgun-js": "^0.18.0",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
+    "react-stripe-elements": "^1.6.0",
     "rimraf": "^2.6.2",
+    "stripe": "^5.9.0",
+    "uuid": "^3.2.1",
     "webpack": "^3.11.0"
   },
   "devDependencies": {
